[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Others/Spawner.gd" type="Script" id=1]
[ext_resource path="res://src/Others/SpawnTimer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Spawner" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
script = ExtResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true
[connection signal="timeout" from="SpawnTimer" to="SpawnTimer" method="_on_SpawnTimer_timeout"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
